Fix html tags, new mixing gap column, fix text-decoration a, new label + input

--- a/resources/scss/rocket/_inputs.scss
+++ b/resources/scss/rocket/_inputs.scss
@@ -41,7 +41,8 @@ input {
     background-color: #F9F9F9 !important;
   }
 }
-.#{$prefix}label{
+.#{$prefix}label-input{
+  display: block;
   input[type="checkbox"] {
     float: left;
     margin-top: 4px;
